# rich-codex

./: .gitignore  .pre-commit-config.yaml  .prettierignore  404.html  CHANGELOG.md  Dockerfile  LICENSE  README.md  action.yml  cat.txt  config-schema.yml  index.html  log_action_cmd.txt  log_action_snippet.txt  log_md_comments.txt  log_yaml_conf.txt  mkdocs.yml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: basic_example.yml  build-docs.yml  deploy-pypi.yml  docker.yml  examples.yml  pre-commit.yml  update-tag.yml
config/cleaning/: index.html
config/colours/: index.html
config/command_setup/: index.html
config/ignoring_changes/: index.html
config/overview/: index.html
config/time_limits/: index.html
config/tweaks/: index.html
config/width/: index.html
docs/: cat.txt  index.md  safety.md  troubleshooting.md
docs/advanced/: safety.md  troubleshooting.md
docs/config/: behaviours.md  cleaning.md  colours.md  command_setup.md  ignoring_changes.md  overview.md  snippet_syntax.md  time_limits.md  troubleshooting.md  truncating_output.md  tweaks.md  width.md
docs/inputs/: config_file.md  direct_inputs.md  markdown.md
docs/installation/: cli.md  docker_image.md  github_action.md
docs/usage/: cli.md  docker_image.md  github_action.md
examples/markdown_comments/: example_docs.md
inputs/config_file/: index.html
inputs/direct_inputs/: index.html
inputs/markdown/: index.html
safety/: index.html
search/: search_index.json
src/rich_codex/: __init__.py  cli.py  codex_search.py  rich_img.py  (+2 more)
troubleshooting/: index.html
(+7 files in other folders)
